[package]
name = "smith-chart"
version = "0.1.0"
edition = "2021"
description = "Interactive, zoomable Smith chart rendered entirely in the browser with Rust + WebAssembly"
license = "MIT"
repository = "https://github.com/danieljpost/smith-chart"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "=0.2.126"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
console_error_panic_hook = "0.1"

[dependencies.web-sys]
version = "0.3"
features = [
  "CanvasRenderingContext2d",
  "Document",
  "Element",
  "HtmlCanvasElement",
  "TextMetrics",
  "Window",
]

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
